--- a/gcash_prompt_flow/.azure-pipelines/gcash_prompt_flow_ci_dev_pipeline.yml
+++ b/gcash_prompt_flow/.azure-pipelines/gcash_prompt_flow_ci_dev_pipeline.yml
@@ -1,32 +1,31 @@
 pr: none
 trigger:
   branches:
-   include:
-     - main
-     - development
+    include:
+      - main
+      - development
   paths:
     include:
       - .azure-pipelines/*
       - llmops/*
-      - named_entity_recognition/*
-
+      - gcash_prompt_flow/*
 
 pool:
   vmImage: ubuntu-latest
 
 variables:
-- group: llmops_platform_dev_vg
+  - group: llmops_platform_dev_vg
 
 parameters:
- - name: env_name
-   displayName: "Execution Environment"
-   default: "dev"
- - name: flow_to_execute
-   displayName: "flow to execute"
-   default: "named_entity_recognition"
- - name: deployment_type
-   displayName: "Determine type of deployment - aml, aks, docker, webapp"
-   default: "aml"
+  - name: env_name
+    displayName: "Execution Environment"
+    default: "dev"
+  - name: flow_to_execute
+    displayName: "flow to execute"
+    default: "gcash_prompt_flow"
+  - name: deployment_type
+    displayName: "Determine type of deployment - aml, aks, docker, webapp"
+    default: "aml"
 
 #=====================================
 # Execute platform_ci_dev_pipeline pipeline for experiment, evaluation and deployment of flows
@@ -37,5 +36,5 @@ stages:
       exec_environment: ${{ parameters.env_name }}
       flow_to_execute: ${{ parameters.flow_to_execute }}
       deployment_type: ${{ lower(parameters.deployment_type) }}
-      connection_details: '$(COMMON_DEV_CONNECTIONS)'
-      registry_details: '$(DOCKER_IMAGE_REGISTRY)'
+      connection_details: "$(COMMON_DEV_CONNECTIONS)"
+      registry_details: "$(DOCKER_IMAGE_REGISTRY)"
