--- a/gcash_prompt_flow/configs/data_config.json
+++ b/gcash_prompt_flow/configs/data_config.json
@@ -1,37 +1,37 @@
 {
-    "datasets":[
+    "datasets": [
         {
-            "PROMPT_FLOW_CONFIG_NAME": "named_entity_recognition",
+            "PROMPT_FLOW_CONFIG_NAME": "gcash_prompt_flow",
             "ENV_NAME": "pr",
             "DATA_PURPOSE": "pr_data",
-            "DATA_PATH":"data/data.jsonl",
-            "DATASET_NAME":"temp_dataset",
-            "DATASET_DESC":"this dataset is for pr validation only"
+            "DATA_PATH": "data/data.jsonl",
+            "DATASET_NAME": "temp_dataset",
+            "DATASET_DESC": "this dataset is for pr validation only"
         },
         {
-            "PROMPT_FLOW_CONFIG_NAME": "named_entity_recognition",
+            "PROMPT_FLOW_CONFIG_NAME": "gcash_prompt_flow",
             "ENV_NAME": "dev",
             "DATA_PURPOSE": "test_data",
-            "DATA_PATH":"data/eval_data.jsonl",
-            "DATASET_NAME":"named_entity_recognition_test",
-            "RELATED_EXP_DATASET": "named_entity_recognition_train",
-            "DATASET_DESC":"this dataset is for evaluating flows"
+            "DATA_PATH": "data/eval_data.jsonl",
+            "DATASET_NAME": "gcash_prompt_flow_test",
+            "RELATED_EXP_DATASET": "gcash_prompt_flow_train",
+            "DATASET_DESC": "this dataset is for evaluating flows"
         },
         {
-            "PROMPT_FLOW_CONFIG_NAME": "named_entity_recognition",
+            "PROMPT_FLOW_CONFIG_NAME": "gcash_prompt_flow",
             "ENV_NAME": "dev",
             "DATA_PURPOSE": "training_data",
-            "DATA_PATH":"data/data.jsonl",
-            "DATASET_NAME":"named_entity_recognition_train",
-            "DATASET_DESC":"this dataset is for prompt experiments"
+            "DATA_PATH": "data/data.jsonl",
+            "DATASET_NAME": "gcash_prompt_flow_train",
+            "DATASET_DESC": "this dataset is for prompt experiments"
         },
         {
-            "PROMPT_FLOW_CONFIG_NAME": "named_entity_recognition",
+            "PROMPT_FLOW_CONFIG_NAME": "gcash_prompt_flow",
             "ENV_NAME": "postprodeval",
             "DATA_PURPOSE": "post_production_eval_data",
-            "DATA_PATH":"data/production_log.jsonl",
-            "DATASET_NAME":"named_entity_recognition_pp_eval",
-            "DATASET_DESC":"this dataset is for post production evaluation"
+            "DATA_PATH": "data/production_log.jsonl",
+            "DATASET_NAME": "gcash_prompt_flow_pp_eval",
+            "DATASET_DESC": "this dataset is for post production evaluation"
         }
     ]
 }
