--- a/gcash_prompt_flow/environment/conda.yml
+++ b/gcash_prompt_flow/environment/conda.yml
@@ -1,9 +1,123 @@
-name: named-entity-env
+name: gcash-prompt-flow
 channels:
   - conda-forge
 dependencies:
   - python=3.9
   - pip
   - pip:
-    - jinja2
-
+      - jinja2
+      - aiohttp==3.9.3
+      - aiosignal==1.3.1
+      - annotated-types==0.6.0
+      - anyio==4.2.0
+      - async-timeout==4.0.3
+      - attrs==23.2.0
+      - azure-ai-ml==1.11.1
+      - azure-common==1.1.28
+      - azure-core==1.30.0
+      - azure-identity==1.14.0
+      - azure-mgmt-core==1.4.0
+      - azure-storage-blob==12.19.0
+      - azure-storage-file-datalake==12.14.0
+      - azure-storage-file-share==12.15.0
+      - azureml-mlflow==1.54.0.post1
+      - blinker==1.7.0
+      - cachetools==5.3.2
+      - certifi==2024.2.2
+      - cffi==1.16.0
+      - charset-normalizer==3.3.2
+      - click==8.1.7
+      - cloudpickle==3.0.0
+      - colorama==0.4.6
+      - cryptography==41.0.7
+      - databricks-cli==0.18.0
+      - distro==1.9.0
+      - docutils==0.20.1
+      - entrypoints==0.4
+      - exceptiongroup==1.2.0
+      - filelock==3.13.1
+      - filetype==1.2.0
+      - Flask==3.0.2
+      - frozenlist==1.4.1
+      - gitdb==4.0.11
+      - GitPython==3.1.41
+      - google-api-core==2.16.2
+      - google-auth==2.27.0
+      - google-search-results==2.4.1
+      - googleapis-common-protos==1.62.0
+      - greenlet==3.0.3
+      - h11==0.14.0
+      - httpcore==1.0.2
+      - httpx==0.26.0
+      - idna==3.6
+      - importlib-metadata==7.0.1
+      - isodate==0.6.1
+      - itsdangerous==2.1.2
+      - jaraco.classes==3.3.0
+      - Jinja2==3.1.3
+      - jsonpickle==3.0.2
+      - jsonschema==4.21.1
+      - jsonschema-specifications==2023.12.1
+      - keyring==24.3.0
+      - keyrings.alt==5.0.0
+      - MarkupSafe==2.1.5
+      - marshmallow==3.20.2
+      - mlflow-skinny==2.10.0
+      - more-itertools==10.2.0
+      - msal==1.26.0
+      - msal-extensions==1.1.0
+      - msrest==0.7.1
+      - multidict==6.0.5
+      - numpy==1.26.3
+      - oauthlib==3.2.2
+      - openai==1.11.1
+      - opencensus==0.11.4
+      - opencensus-context==0.1.3
+      - opencensus-ext-azure==1.1.13
+      - packaging==23.2
+      - pandas==2.2.0
+      - pillow==10.2.0
+      - portalocker==2.8.2
+      - promptflow==1.4.1
+      - promptflow-sdk==0.0.1
+      - promptflow-tools==1.1.0
+      - protobuf==4.25.2
+      - psutil==5.9.8
+      - pyarrow==14.0.2
+      - pyasn1==0.5.1
+      - pyasn1-modules==0.3.0
+      - pycparser==2.21
+      - pydantic==2.6.0
+      - pydantic_core==2.16.1
+      - pydash==7.0.5
+      - PyJWT==2.8.0
+      - python-dateutil==2.8.2
+      - python-dotenv==1.0.1
+      - pytz==2023.4
+      - pywin32==306
+      - pywin32-ctypes==0.2.2
+      - PyYAML==6.0.1
+      - referencing==0.33.0
+      - regex==2023.12.25
+      - requests==2.31.0
+      - requests-oauthlib==1.3.1
+      - rpds-py==0.17.1
+      - rsa==4.9
+      - ruamel.yaml==0.18.5
+      - ruamel.yaml.clib==0.2.8
+      - six==1.16.0
+      - smmap==5.0.1
+      - sniffio==1.3.0
+      - SQLAlchemy==2.0.25
+      - sqlparse==0.4.4
+      - strictyaml==1.7.3
+      - tabulate==0.9.0
+      - tiktoken==0.5.2
+      - tqdm==4.66.1
+      - typing_extensions==4.9.0
+      - tzdata==2023.4
+      - urllib3==2.2.0
+      - waitress==2.1.2
+      - Werkzeug==3.0.1
+      - yarl==1.9.4
+      - zipp==3.17.0
