--- a/gcash_prompt_flow/llmops_config.json
+++ b/gcash_prompt_flow/llmops_config.json
@@ -1,30 +1,30 @@
 {
-    "envs":[
-            {
-                "ENV_NAME": "pr",
-                "RUNTIME_NAME": "",
-                "KEYVAULT_NAME": "",
-                "RESOURCE_GROUP_NAME": "",
-                "WORKSPACE_NAME": "",
-                "STANDARD_FLOW_PATH": "flows/standard",
-                "EVALUATION_FLOW_PATH": "flows/evaluation"
-            },
-            {
-                "ENV_NAME": "dev",
-                "RUNTIME_NAME": "",
-                "KEYVAULT_NAME": "",
-                "RESOURCE_GROUP_NAME": "",
-                "WORKSPACE_NAME": "",
-                "STANDARD_FLOW_PATH": "flows/standard",
-                "EVALUATION_FLOW_PATH": "flows/evaluation"
-            },
-            {
-                "ENV_NAME": "postprodeval",
-                "RUNTIME_NAME": "",
-                "KEYVAULT_NAME": "",
-                "RESOURCE_GROUP_NAME": "",
-                "WORKSPACE_NAME": "",
-                "STANDARD_FLOW_PATH": "flows/post-production-evaluation"
-            }
+    "envs": [
+        {
+            "ENV_NAME": "pr",
+            "RUNTIME_NAME": "",
+            "KEYVAULT_NAME": "",
+            "RESOURCE_GROUP_NAME": "",
+            "WORKSPACE_NAME": "",
+            "STANDARD_FLOW_PATH": "flows/standard",
+            "EVALUATION_FLOW_PATH": "flows/evaluation"
+        },
+        {
+            "ENV_NAME": "dev",
+            "RUNTIME_NAME": "",
+            "KEYVAULT_NAME": "gcashwealthcoachpockv",
+            "RESOURCE_GROUP_NAME": "gcash-wealthcoach-poc-rg",
+            "WORKSPACE_NAME": "gcashwealthcoachpocaistudio",
+            "STANDARD_FLOW_PATH": "flows/standard",
+            "EVALUATION_FLOW_PATH": "flows/evaluation"
+        },
+        {
+            "ENV_NAME": "postprodeval",
+            "RUNTIME_NAME": "",
+            "KEYVAULT_NAME": "",
+            "RESOURCE_GROUP_NAME": "",
+            "WORKSPACE_NAME": "",
+            "STANDARD_FLOW_PATH": "flows/post-production-evaluation"
+        }
     ]
 }
